--- a/texto.Rmd
+++ b/texto.Rmd
@@ -18,9 +18,9 @@ En los siguientes gráficos, agregá título, etiquetas de los ejes y texto alte
 #' fig.alt: ____
 ggplot(pinguinos, aes(especie)) +
   geom_bar() +
-  labs(title = ____,
-       x = ____
-       y = ____)
+  labs(title = "Cantidad de pingüinos por especie y sexo",
+       x = "Sexo",
+       y = "Cantidad")
 ```
 
 
